# afsk

./: LICENSE.md  README.md
afsk/: crc.c  crc.h  hdlc.c  hdlc.h  main.c  meson.build  modem.c  modem.h  ringbuffer.c  ringbuffer.h
afsk.xcodeproj/: project.pbxproj
afsk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
afsk.xcodeproj/project.xcworkspace/xcuserdata/albin.xcuserdatad/: UserInterfaceState.xcuserstate
afsk.xcodeproj/xcuserdata/albin.xcuserdatad/xcschemes/: afsk.xcscheme  xcschememanagement.plist
